// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeHomeScreen renders and behaves correctly for CP-DOTO restricted countries 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "top",
    ]
  }
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderBottomColor": 0,
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "center",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "left": 0,
          "marginBottom": 0,
          "marginLeft": 16,
          "opacity": 1,
          "padding": 0,
          "position": "absolute",
        }
      }
      testID="Hamburguer"
    >
      <svg
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
      >
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="9.75"
          y2="9.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="15.75"
          y2="15.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="21.75"
          y2="21.75"
        />
      </svg>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "opacity": AnimatedValue {
              " __value": 0,
            },
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 16,
            "lineHeight": 22,
          }
        }
      >
        $10.00
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    scrollEventThrottle={16}
    stickyHeaderIndices={Array []}
    testID="ExchangeScrollView"
  >
    <View>
      <RNCSafeAreaView
        edges={
          Array [
            "bottom",
          ]
        }
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "padding": 16,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Jost-Medium",
                  "fontSize": 22,
                  "lineHeight": 28,
                  "marginRight": 8,
                }
              }
            >
              goldPrice
            </Text>
            <View
              accessible={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <svg
                fill="none"
                height={14}
                style={Object {}}
                viewBox="0 0 16 16"
                width={14}
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="8"
                  r="7"
                  stroke="#2E3338"
                  stroke-width="1.25"
                  style={Object {}}
                />
                <path
                  d="M8 12V7M8 6V5"
                  stroke="#2E3338"
                  stroke-width="1.25"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 24,
                  "height": 27,
                  "lineHeight": 27,
                }
              }
            >
              $10.00
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 217.5,
              "justifyContent": "center",
              "width": 750,
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="#EEB93C"
            hidesWhenStopped={true}
            size="large"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "flexDirection": "column",
              },
              Object {
                "marginBottom": 16,
                "marginHorizontal": 16,
                "marginTop": 24,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EEB93C",
                  "flexGrow": 1,
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="WithdrawCELO"
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                withdrawCelo
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#EDEEEF",
              "height": 1,
              "marginHorizontal": 16,
            }
          }
        />
        <View
          style={
            Object {
              "marginVertical": 16,
              "paddingHorizontal": 16,
            }
          }
          testID="ExchangeAccountOverview"
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Jost-Medium",
                "fontSize": 22,
                "lineHeight": 28,
                "marginBottom": 8,
              }
            }
          >
            yourGoldBalance
          </Text>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 24,
                "lineHeight": 27,
                "marginBottom": 8,
              }
            }
            testID="CeloBalance"
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              
              2.000
            </Text>
          </Text>
          <Text
            style={
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Equal to 
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              26.60
            </Text>
          </Text>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#EDEEEF",
              "height": 1,
              "marginHorizontal": 16,
            }
          }
        />
        <View
          style={
            Object {
              "paddingBottom": 8,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Jost-Medium",
                "fontSize": 22,
                "lineHeight": 28,
              }
            }
          >
            global:activity
          </Text>
        </View>
      </RNCSafeAreaView>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`ExchangeHomeScreen renders and behaves correctly for non CP-DOTO restricted countries 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "top",
    ]
  }
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderBottomColor": 0,
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "center",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "left": 0,
          "marginBottom": 0,
          "marginLeft": 16,
          "opacity": 1,
          "padding": 0,
          "position": "absolute",
        }
      }
      testID="Hamburguer"
    >
      <svg
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
      >
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="9.75"
          y2="9.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="15.75"
          y2="15.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="21.75"
          y2="21.75"
        />
      </svg>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "opacity": AnimatedValue {
              " __value": 0,
            },
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 16,
            "lineHeight": 22,
          }
        }
      >
        $10.00
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    scrollEventThrottle={16}
    stickyHeaderIndices={Array []}
    testID="ExchangeScrollView"
  >
    <View>
      <RNCSafeAreaView
        edges={
          Array [
            "bottom",
          ]
        }
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "padding": 16,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Jost-Medium",
                  "fontSize": 22,
                  "lineHeight": 28,
                  "marginRight": 8,
                }
              }
            >
              goldPrice
            </Text>
            <View
              accessible={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <svg
                fill="none"
                height={14}
                style={Object {}}
                viewBox="0 0 16 16"
                width={14}
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="8"
                  r="7"
                  stroke="#2E3338"
                  stroke-width="1.25"
                  style={Object {}}
                />
                <path
                  d="M8 12V7M8 6V5"
                  stroke="#2E3338"
                  stroke-width="1.25"
                  style={Object {}}
                />
              </svg>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 24,
                  "height": 27,
                  "lineHeight": 27,
                }
              }
            >
              $10.00
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 217.5,
              "justifyContent": "center",
              "width": 750,
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="#EEB93C"
            hidesWhenStopped={true}
            size="large"
          />
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginBottom": 28,
              "marginHorizontal": 12,
              "marginTop": 24,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                },
                Object {
                  "flex": 1,
                  "marginHorizontal": 4,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#EEB93C",
                    "flexGrow": 1,
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="BuyCelo"
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  buy
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                },
                Object {
                  "flex": 1,
                  "marginHorizontal": 4,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#EEB93C",
                    "flexGrow": 1,
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="SellCelo"
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  sell
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#EDEEEF",
              "height": 1,
              "marginHorizontal": 16,
            }
          }
        />
        <View
          style={
            Object {
              "marginVertical": 16,
              "paddingHorizontal": 16,
            }
          }
          testID="ExchangeAccountOverview"
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Jost-Medium",
                "fontSize": 22,
                "lineHeight": 28,
                "marginBottom": 8,
              }
            }
          >
            yourGoldBalance
          </Text>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 24,
                "lineHeight": 27,
                "marginBottom": 8,
              }
            }
            testID="CeloBalance"
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              
              2.000
            </Text>
          </Text>
          <Text
            style={
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Equal to 
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              26.60
            </Text>
          </Text>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#EDEEEF",
              "height": 1,
              "marginHorizontal": 16,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="WithdrawCELO"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#EDEEEF",
                  "borderBottomWidth": 1,
                  "marginLeft": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "paddingRight": 16,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                      }
                    }
                  >
                    withdrawCelo
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <svg
                    height={20}
                    style={Object {}}
                    viewBox="0 0 15 16"
                    width={10}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                      fill="#B4B9BD"
                      style={Object {}}
                    />
                  </svg>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingBottom": 8,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Jost-Medium",
                "fontSize": 22,
                "lineHeight": 28,
              }
            }
          >
            global:activity
          </Text>
        </View>
      </RNCSafeAreaView>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
